--- a/starting-code/app/src/main/res/layout/new_app_widget.xml
+++ b/starting-code/app/src/main/res/layout/new_app_widget.xml
@@ -1,4 +1,7 @@
-<!-- Copyright 2017 Google Inc.
+<!--
+
+Copyright 2017 Google Inc.
+Modifications Copyright 2019 Melely S.r.l.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -18,69 +21,9 @@ limitations under the License. -->
                 android:background="#09C"
                 android:padding="@dimen/widget_margin" >
 
-    <!-- Panel for Widget ID -->
-    <LinearLayout
-        android:id="@+id/section_id"
-        style="@style/AppWidgetSection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal">
+    <ImageView android:id="@+id/draw"
+               android:scaleType="fitXY"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent" />
 
-        <TextView
-            android:id="@+id/appwidget_id_label"
-            style="@style/AppWidgetLabel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="@string/widget_id_label"/>
-
-        <TextView
-            android:id="@+id/appwidget_id"
-            style="@style/AppWidgetText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:text="XX"/>
-    </LinearLayout>
-
-    <!-- Panel for widget update date and number of updates -->
-    <LinearLayout
-        android:id="@+id/section_update"
-        style="@style/AppWidgetSection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/section_id"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/appwidget_update_label"
-            style="@style/AppWidgetLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="@string/widget_update_label"/>
-
-        <TextView
-            android:id="@+id/appwidget_update"
-            style="@style/AppWidgetText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/date_count_format"/>
-    </LinearLayout>
-
-    <!-- Update widget button -->
-    <Button
-        android:id="@+id/button_update"
-        style="@style/AppWidgetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/section_update"
-        android:layout_centerHorizontal="true"
-        android:text="@string/widget_button_update" />
 </RelativeLayout>
